# buck-hil

./: .gitignore  AGENTS.md  README.md
docs/: 1-system-architecture.md  2-pl-fpga-design.md  3-communication-protocol.md  4-ps-software-design.md  5-host-application.md  6-hardware-interface.md  7-buck-solver-design.md  8-vivado-setup-guide.md
fpga/constraints/: zu3eg.xdc
fpga/rtl/: axi_mm_regs.sv  buck_hil_top.sv  buck_solver.sv  capture_manager.sv  dac_interface.sv  pwm_capture.sv
fpga/tb/: buck_solver_tb.sv  harness_capture.cpp  harness_dac.cpp  harness_solver.cpp
fpga/vivado/: create_vivado_project.tcl
host/: CMakeLists.txt
host/protocol/: Protocol.h
host/src/: CommunicationWorker.cpp  CommunicationWorker.h  DataProcessor.cpp  DataProcessor.h  FrameParser.cpp  FrameParser.h  MainWindow.cpp  MainWindow.h  ParameterPanel.cpp  ParameterPanel.h  RingBuffer.h  main.cpp
ps/: Makefile  lscript.ld
ps/inc/: dma_ctrl.h  logger.h  params.h  platform.h  protocol.h  tcp_server.h
ps/src/: dma_ctrl.c  logger.c  main.c  params.c  platform.c  protocol.c  tcp_server.c
